--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,10 +43,13 @@
     </style>
 
     <style name="lightBlueButton" parent="mainButton">
+        <item name="fontFamily">@font/font_awesome_solid</item>
         <item name="android:background">@drawable/tags_button</item>
-        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:padding">10dp</item>
         <item name="android:textColorHint">@color/white</item>
     </style>
 
