Исправлена подгрузка тегов на MainScreen

--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -57,7 +57,8 @@
                 android:id="@+id/tagsInnerMainScreenLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical"
+                android:gravity="center"/>
 
         </ScrollView>
 
