Отрефакторен CategoryElement; Убран баг с категориями на MainScreen

--- a/app/src/main/res/layout/category_element.xml
+++ b/app/src/main/res/layout/category_element.xml
@@ -63,7 +63,8 @@
         android:background="@drawable/block_text"
         android:gravity="center"
         android:minHeight="50dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             style="@style/mainText"
