--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -74,6 +74,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="0dp"
                         android:paddingEnd="0dp"
+                        android:visibility="gone"
                         android:text="Оценок еще нет" />
 
                     <RatingBar
