new button plusImage fix comments for user

--- a/app/src/main/res/drawable/plus_photo_bg.xml
+++ b/app/src/main/res/drawable/plus_photo_bg.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <layer-list>
+            <item>
+                <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+                    <gradient android:endColor="@color/rightBorder" android:startColor="@color/leftBorder" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
 </selector>
