--- a/app/src/main/res/layout/addition_service.xml
+++ b/app/src/main/res/layout/addition_service.xml
@@ -167,12 +167,16 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
+                    <TextView
                         android:id="@+id/servicePhotoAddServiceImage"
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@mipmap/ic_launcher_round"
-                        tools:srcCompat="@tools:sample/avatars" />
+                        android:textSize="60sp"
+                        android:background="@drawable/plus_photo_bg"
+                        android:textColor="@color/white"
+                        android:layout_marginEnd="15dp"
+                        android:text="+"/>
                 </LinearLayout>
 
             </HorizontalScrollView>
