--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -107,13 +107,20 @@
                 android:background="@drawable/block_text"
                 android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/cityEditProfileInput"
+                <TextView
                     style="@style/mainText"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@android:color/transparent"
-                    android:hint="@string/cityRegistration" />
+                    android:layout_weight="1" />
+
+                <Spinner
+                    android:id="@+id/citySpinnerEditProfileSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:backgroundTint="@color/panelColor"
+                    android:entries="@array/choice_cites"
+                    android:popupBackground="@color/panelColor" />
             </LinearLayout>
 
             <!-- Телефон -->
@@ -137,9 +144,9 @@
                     style="@style/mainText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
                     android:backgroundTint="@android:color/transparent"
                     android:hint="@string/phone"
-                    android:layout_marginBottom="5dp"
                     android:inputType="phone" />
             </LinearLayout>
 
