--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainColorBG"
-    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.profile.ProfileActivity">
+    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.ui.activities.profile.ProfileActivity">
 
     <LinearLayout
         android:id="@+id/headerProfileLayout"
