--- a/app/src/main/res/layout/authorization.xml
+++ b/app/src/main/res/layout/authorization.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.presentation.logIn.AuthorizationActivity"
+    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.ui.activities.logIn.AuthorizationActivity"
     style="@style/LogInPages">
 
     <ImageView
