--- a/app/src/main/res/layout/adding_service.xml
+++ b/app/src/main/res/layout/adding_service.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainColorBG"
-    tools:context="com.bunbeauty.ideal.myapplication.createService.AddingService">
+    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.createService.AddingService">
 
     <LinearLayout
         android:id="@+id/headerAddServiceLayout"
