--- a/app/src/main/res/layout/adding_service.xml
+++ b/app/src/main/res/layout/adding_service.xml
@@ -30,6 +30,11 @@
             android:layout_height="0dp"
             android:orientation="vertical">
             <LinearLayout
+                android:id="@+id/mainLayoutAddService"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            <LinearLayout
                 style="@style/block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -97,12 +102,51 @@
                     android:inputType="textMultiLine|textCapSentences" />
             </LinearLayout>
 
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                android:layout_marginTop="10dp">
+
+                <LinearLayout
+                    android:id="@+id/feedAddServiceLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/servicePhotoAddServiceImage"
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="wrap_content"
+                        android:textSize="60sp"
+                        android:background="@drawable/plus_photo_bg"
+                        android:textColor="@color/white"
+                        android:layout_marginEnd="15dp"
+                        android:text="+"/>
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
+            <Button
+                android:id="@+id/addServiceAddServiceBtn"
+                style="@style/mainButtonOther"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/addServices" />
+
+            </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/premiumAddServiceHeaderLayout"
                 style="@style/block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="50dp"
                 android:background="@drawable/block_text"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
                 <TextView
@@ -153,41 +197,18 @@
                 android:visibility="gone">
             </LinearLayout>
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none"
-                android:layout_marginTop="10dp">
-
-                <LinearLayout
-                    android:id="@+id/feedAddServiceLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/servicePhotoAddServiceImage"
-                        android:layout_width="80dp"
-                        android:gravity="center"
-                        android:layout_height="wrap_content"
-                        android:textSize="60sp"
-                        android:background="@drawable/plus_photo_bg"
-                        android:textColor="@color/white"
-                        android:layout_marginEnd="15dp"
-                        android:text="+"/>
-                </LinearLayout>
-
-            </HorizontalScrollView>
-
             <Button
-                android:id="@+id/addServiceAddServiceBtn"
+                android:id="@+id/continueAddServiceBtn"
                 style="@style/mainButtonOther"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:text="@string/addServices" />
+                android:text="Продолжить" />
+
         </LinearLayout>
+
 
     </ScrollView>
 
