--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -34,7 +34,7 @@
         android:layout_gravity="center"
         android:fontFamily="@font/font_awesome_solid"
         android:gravity="center"
-        android:text="@string/subscribe_heart"
+        android:text="@string/subscribe_ico"
         android:textColor="@color/red"
         android:textSize="25sp" />
 
@@ -46,7 +46,7 @@
         android:layout_gravity="center"
         android:fontFamily="@font/font_awesome_solid"
         android:gravity="center"
-        android:text="@string/subscribe_heart"
+        android:text="@string/subscribe_ico"
         android:textColor="@color/red"
         android:visibility="gone"
         android:textSize="25sp" />
