--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/panelColor"
-        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomProfileLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout" />
@@ -127,11 +127,12 @@
                     android:gravity="center">
 
                     <RatingBar
-                        android:id="@+id/ratingBarProfile"
+                        android:id="@+id/profileRatingBar"
                         style="@android:style/Widget.Holo.RatingBar.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:visibility="gone"
                         android:theme="@style/ratingBarColors" />
 
                     <TextView
@@ -144,12 +145,21 @@
                         android:visibility="gone" />
                 </LinearLayout>
 
-                <LinearLayout
+                <Button
+                    android:id="@+id/subscriptionsProfileBtn"
+                    style="@style/smallMainButtonOther"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/main_button_height"
+                    android:layout_gravity="start"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/addServices"
+                    android:visibility="invisible" />
+
+                <!--<LinearLayout
                     android:id="@+id/subscriptionsProfileLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:visibility="invisible"
                     android:background="@drawable/main_button"
                     android:gravity="center">
 
@@ -159,8 +169,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:text="Подписки" />
-                </LinearLayout>
+                </LinearLayout>-->
             </LinearLayout>
         </LinearLayout>
 
@@ -203,13 +214,13 @@
         android:layout_height="0dp"
         android:scrollbars="none"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomProfileLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/servicesProfileRecyclerView" />
 
     <LinearLayout
-        android:id="@+id/footerProfileLayout"
+        android:id="@+id/bottomProfileLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottom_panel_height"
         android:orientation="horizontal"
