--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/back" />
+        android:text="@string/back_ico" />
 
     <TextView
         android:id="@+id/titleTopPanelText"
@@ -24,8 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="center"
-        android:text="Заголовок" />
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/settingTopPanelText"
@@ -34,8 +33,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="center"
-        android:text="@string/settings" />
+        android:gravity="center" />
 
     <ImageView
         android:id="@+id/logoTopPanelImage"
@@ -71,7 +69,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/search"
+        android:text="@string/search_ico"
         android:visibility="gone"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -96,7 +94,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="@string/subscribe_heart"
+            android:text="@string/subscribe_ico"
             android:visibility="gone" />
 
         <TextView
@@ -106,7 +104,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="@string/subscribe_heart"
+            android:text="@string/subscribe_ico"
             android:visibility="gone" />
 
     </LinearLayout>
