--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -198,6 +198,7 @@
         android:id="@+id/servicesProfileRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="5dp"
         android:scrollbars="none"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/ordersProfileRecycleView"
