--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -8,7 +8,7 @@
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.profile.ProfileActivity">
 
     <LinearLayout
-        android:id="@+id/headerProfileLayout"
+        android:id="@+id/topProfileLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -23,7 +23,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomProfileLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/topProfileLayout" />
 
     <LinearLayout
         android:id="@+id/mainProfileLayout"
@@ -35,7 +35,7 @@
         app:layout_constraintBottom_toTopOf="@+id/servicesProfileRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout"
+        app:layout_constraintTop_toBottomOf="@+id/topProfileLayout"
         android:animateLayoutChanges="true">
 
         <!-- Верхняя часть-->
